# subtrix

./: .gitignore  LICENSE.rst  README.md  README.rst  gbeeDeploy.py  pyproject.toml  requirements  setup.cfg  setup.py  subtrix.py
_data_/: func.yaml
src/subtrix.egg-info/: PKG-INFO  SOURCES.txt
subtrix/: func.yaml  rule.yaml  subtrix.py  thing.py  thingifier.py  varr.yaml
subtrix/_data_/: loop.yaml  matrix.yaml  sub.yaml  subtrix.yaml  thing.yaml  varr.yaml
test/: conftest.py  fixtures.py  subtrixTEST.py  t_subtrix.py  thingTEST.py
test/_data_/: fixtrues.yaml  subtrixTEST.yaml
test_subtrix/fixtures/: fixtures.yaml  result_func.yaml  test.yaml
test_subtrix/subtrix/: formatterTEST.py  subtrixTEST.py  utilsTEST.py
tests/_data_/: t_subtrix.yaml
